--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Today List</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="icons/today_list_icon.png">
   <link rel="stylesheet" href="today_list.css">
 </head>
 <body>
